--- a/src/components/style.css
+++ b/src/components/style.css
@@ -87,7 +87,6 @@ body {
 	transition: all .5s;
 }
 .heading-secondary:hover {
-	transform: skewY(2deg) skewX(5deg);
 	letter-spacing: 10px;
 	cursor: default;
 }
@@ -118,7 +117,11 @@ body {
 .u-margin-bottom-8 {
 	margin-bottom: 8rem;
 }
-
+@media (max-width: 1000px) {
+	.u-margin-bottom-8 {
+		margin-bottom: 4rem;
+	}
+}
 .btn:link,
 .btn:visited {
 	text-transform: uppercase;
@@ -198,47 +201,6 @@ body {
 	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7);
 }
 
-.composition {
-	position: relative;
-}
-.composition__photo {
-	width: 50%;
-	box-shadow: 1px 1rem 4rem rgba(0, 0, 0, 0.6);
-	border-radius: 2px;
-	position: absolute;
-	transition: all .1s;
-	outline-offset: 1rem;
-}
-.composition__photo--p1 {
-	left: 8rem;
-	top: -5rem;
-	transform: rotate(5deg);
-	z-index: 2;
-}
-.composition__photo--p2 {
-	left: -5rem;
-	top: 5rem;
-	z-index: 5;
-}
-.composition__photo--p3 {
-	right: 10rem;
-	top: 10rem;
-	z-index: 3;
-}
-.composition__photo--p4 {
-	left: 0;
-	top: 20rem;
-	z-index: 3;
-}
-.composition__photo:hover {
-	outline: 1rem solid rgba(218, 165, 32, 0.7);
-	transform: scale(1.2);
-	z-index: 20;
-}
-.composition:hover .composition__photo:not(:hover) {
-	transform: scale(0.95);
-}
-
 .section-features {
 	background-image: url("../images/book3.jpg");
 	background-color: #addce4;
@@ -269,13 +231,6 @@ body {
 }
 .section-features .feature-box__text {
 	font-size: 2rem;
-	cursor: default;
-}
-
-.section-about {
-	background-color: #ffed78;
-	padding: 18rem 0;
-	margin-top: -20vh;
 	cursor: default;
 }
 
@@ -317,6 +272,14 @@ body {
 }
 .row [class^="col-"] {
 	float: left;
+}
+@media (max-width: 1350px) {
+	.row [class^="col-"] {
+		float: none;
+	}
+	.row .col-1-of-2 {
+		width: 100%;
+	}
 }
 .row [class^="col-"]:not(:last-child) {
 	margin-right: 6rem;
