--- a/src/components/style.css
+++ b/src/components/style.css
@@ -49,7 +49,7 @@ body {
 	font-size: 1rem;
 	line-height: 1.7;
 	color: #000;
-	background-color: #ffed78;
+	/* background-color: #ffed78; */
 }
 
 .heading-primary {
